force-app/main/default/objects/GTSWebhookTrack__c/GTSWebhookTrack__c.object-meta.xml
<CustomObject>
    <description>Para el control del webhook de pagos</description>
    <label>GTS Webhook Track</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GTS Webhook Track Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GTS Webhook Tracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>