force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_bookToBookId__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_bookToBookId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id del pago book to book</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>bookToBookId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>