force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_bookToBookStatus__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_bookToBookStatus__c</fullName>
    <description>Estado del pago book to book</description>
    <encryptionScheme>None</encryptionScheme>
    <label>bookToBookStatus</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>