force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_createDate__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_createDate__c</fullName>
    <description>Fecha de creación del registro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>createDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>