force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_idempotentReference__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_idempotentReference__c</fullName>
    <description>Id del pago global</description>
    <encryptionScheme>None</encryptionScheme>
    <label>idempotentReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>