force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_isCancelation__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_isCancelation__c</fullName>
    <description>Marca en caso de que sea una cancelación</description>
    <encryptionScheme>None</encryptionScheme>
    <label>isCancelation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>