force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_originCountry__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_originCountry__c</fullName>
    <description>País de origen del pago</description>
    <encryptionScheme>None</encryptionScheme>
    <label>originCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>