force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_paymentSystemName__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_paymentSystemName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>paymentSystemName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>