force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_updateDate__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_updateDate__c</fullName>
    <description>Fecha de última actualización del registro</description>
    <encryptionScheme>None</encryptionScheme>
    <label>updateDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>