force-app/main/default/objects/GTSWebhookTrack__c/fields/WHT_TXT_valueDate__c.field-meta.xml
<CustomField>
    <fullName>WHT_TXT_valueDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>valueDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>